--- a/Space Invaders 3D.vcxproj
+++ b/Space Invaders 3D.vcxproj
@@ -97,12 +97,14 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DiffuseShader.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyManager.cpp" />
     <ClCompile Include="FBXMesh.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="OBJ.cpp" />
     <ClCompile Include="PlaneMesh.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="RenderTarget.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Space_Invaders_3DApp.cpp" />
     <ClCompile Include="main.cpp" />
@@ -114,12 +116,14 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DiffuseShader.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyManager.h" />
     <ClInclude Include="FBXMesh.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="OBJ.h" />
     <ClInclude Include="PlaneMesh.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="RenderTarget.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Space_Invaders_3DApp.h" />
     <ClInclude Include="TextureShader.h" />
